# invoke-rs

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20240403125943_tldr.sql
src/: client.rs  handler.rs  invoke_ai.rs  main.rs  models.rs  telegram.rs
src/handler/: invoke.rs  local.rs  mod.rs  ollama.rs  store.rs
src/invoke_ai/: client.rs  mod.rs
src/invoke_ai/models/: invocations.rs  mod.rs
src/invoke_ai/models/edges/: anime.json  default.json  default_opendalle.json  gigachad.json  knit.json  lego.json
src/local_ai/: mod.rs  models.rs  prompts.rs
src/models/: enqueue.rs  mod.rs
src/models/edges/: anime.json  default.json  gigachad.json  lego.json
src/ollama/: mod.rs  prompts.rs
src/store/: mod.rs
src/telegram/: admin.rs  fact_check.rs  invoke_ai.rs  local_ai.rs  mod.rs  ollama.rs
src/utils/: languages.rs  mod.rs  searxng.rs
