[package]
name = "invoke-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.5"
config = "0.14"
chrono = "0.4"
dotenv = "0.15"
futures-util = "0.3"
futures = "0.3"
lingua = { version = "1.6", default-features = false, features = [
    "french",
    "english",
    "dutch",
] }
moka = { version = "0.12", features = ["future"] }
once_cell = "1.18"
rand = "0.8.5"
reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
rust_socketio = { version = "0.6", features = ["async"] }
teloxide = { version = "0.12", features = ["macros"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "fast-rng", "serde"] }
url = "2.5"

env_logger = "0.11"
log = "0.4"

readability = { git = "https://github.com/BartWillems/readability.git", default-features = false }

[profile.release]
lto = "thin"
strip = "debuginfo"
